this time we use json row data 


lecture -4 Middleware
An express middleware is nothing more or less than just any ordinary function that has three parameters:Request & Response object,
and a function to invoke the next middleeare function

middleeare allow you to seprate your logic multiple difference functions,invoking each in sequential order

ex = We used the express.json() middleeare to handle request to detect body request with json, and the function the 
request object and attaches the proper payload to req.body

we were set key in postman header
aurtorization = '123'
then use condition 

lecture - 5 cookie
http cookie are a small piece of data that is send  back from a server to web browser 
we server store these cookies which allow subseqent requests made to the server to exchange the cookie for piece of information.

Cookie can have an expiration date . Once expired , the cookie will no longer be sent to the server whenever a request is made

we are set cookie using command -  resp.cookie('session_id','123456') 
we are get cookie using command - req.cookies


lecture - 6 session
session is very important because it allow to maintain http request.
the major difference between session and cookie is that session live on server and cookie live on the client side
now  reason is why you  need session ,many reason but major reason is you don't want to save anyviewer data as a cookie like anything
that's sensitive so for example a username a password you

you don't want to save that as a cookie on the client you want to save that on the database so that what the session know which
user is making that request so essentially session are more secure because they store on the server rather than having everything
stored in client so I think honestly the best way to show you guys how it works is by providing example in express so 

1st step = npm i express-session

lecture -7 Routers

lecture - 8 Connecting to MYSql database







