@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= siteTitle %></title>
+    <title><%= title %></title>
 </head>
 <body>
-    <h1><%= siteTitle %></h1>
+    <h1><%= title %></h1>
     <p><%= message %></p>
 </body>
 </html>
